# example-robot-data

./: pyproject.toml  setup.cfg  setup.py
python/example_robot_data/: robots_loader.py
