[metadata]
name = example_robot_data
description = Set of robot URDFs for benchmarking and developed examples.
long_description = file: README.md
long_description_content_type = text/markdown
;author =
;author_email =
license = BSD
license_file = LICENSE
platforms = any
url = https://github.com/Gepetto/example-robot-data

project_urls =
    Changelog = https://github.com/Gepetto/example-robot-data/releases
    Tracker = https://github.com/Gepetto/example-robot-data/issues
    Source = https://github.com/Gepetto/example-robot-data

keywords =
    model
    description
    urdf
    robot
    robotics
    pinocchio

classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Topic :: Games/Entertainment :: Simulation
    Topic :: Scientific/Engineering :: Physics
    Framework :: Robot Framework
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
packages = find:
package_dir =
    =python
python_requires = >=3.6

[options.packages.find]
where = python

[options.package_data]
example_robot_data =
    share/example-robot-data/robots/*.*
    share/example-robot-data/robots/**/*.*
    share/example-robot-data/robots/**/**/*.*
    share/example-robot-data/robots/**/**/**/*.*
    share/example-robot-data/robots/**/**/**/**/*.*
    share/example-robot-data/robots/**/**/**/**/**/*.*
    share/example-robot-data/robots/**/**/**/**/**/**/*.*
